testsuite/poke.pkl/int-type-diag-4.pk
/* { dg-do compile } */

type int1 =
  int<1>; /* { dg-error "width of a signed integral.*.2,64. range" } */
